Deluge/overlays/example/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: deluge
  labels:
    istio-injection: enabled
