Deluge/overlays/example/dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: deluge
spec:
    replicas: 1
    selector:
        matchLabels:
            app: deluge
    template:
        metadata:
            labels:
                app: deluge
        spec:
            containers:
                - name: deluge
                  image: linuxserver/deluge:latest
                  ports:
                      - name: "traffic-1"
                        containerPort: 7850
                        protocol: TCP
                      - name: "traffic-2"
                        containerPort: 7851
                        protocol: TCP
                      - name: "http-deluge-web"
                        containerPort: 8112
                        protocol: TCP
                      - name: "daemon"
                        containerPort: 58846
                        protocol: TCP
                  volumeMounts:
                      - name: deluge-config
                        mountPath: /config
                      - name: deluge-downloads
                        mountPath: /downloads
                      - name: deluge-fileserver
                        mountPath: /SaturnPool
                  resources:
                      requests:
                          memory: 2048Mi
                          cpu: .25
                      limits:
                          memory: 8192Mi
                          cpu: 2
            volumes:
                - name: deluge-config
                  persistentVolumeClaim:
                    claimName: deluge-config
                - name: deluge-downloads
                  persistentVolumeClaim:
                    claimName: deluge-downloads
                - name: deluge-fileserver
                  persistentVolumeClaim:
                    claimName: deluge-fileserver
